--- a/src/main/resources/lang/gui.properties
+++ b/src/main/resources/lang/gui.properties
@@ -11,9 +11,32 @@ menu.edit=Edit
 menu.edit.undo=Undo
 menu.edit.redo=Redo
 
+# Menu info
+menu.info=Info
+menu.info.page=Project page
+menu.info.about=About
+
 # Dialogs
 dialog.open.filter=NBT files
 dialog.open.title=Open NBT files
 
 dialog.unsaved.title=Save dialog
 dialog.unsaved.message=Do you want to discard your changes?
+
+dialog.about.title=About
+dialog.about.authors=TheCodingEngineer
+dialog.about.description=Cross-platform graphical editor for Minecraft NBT files
+dialog.about.license=\
+This program is free software: you can redistribute it and/or modify <br/> \
+it under the terms of the GNU General Public License as published by <br/> \
+the Free Software Foundation, either version 3 of the License, or <br/> \
+(at your option) any later version. <br/> \
+<br/> \
+This program is distributed in the hope that it will be useful, <br/> \
+but WITHOUT ANY WARRANTY; without even the implied warranty of <br/> \
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the <br/> \
+GNU General Public License for more details. <br/> \
+<br/> \
+You should have received a copy of the GNU General Public License <br/>  \
+along with this program. If not, see <a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>.
+dialog.about.close=Close
