Implemented basic edit functions: add node, delete node, changes values

--- a/src/main/resources/lang/gui.properties
+++ b/src/main/resources/lang/gui.properties
@@ -11,6 +11,13 @@ menu.edit=Edit
 menu.edit.undo=Undo
 menu.edit.redo=Redo
 
+menu.node=Node menu
+menu.node.delete=Delete node
+menu.node.edit=Edit node
+menu.node.view=View node
+menu.node.insert=Insert node
+menu.node.rename=Rename node
+
 # Menu info
 menu.info=Info
 menu.info.page=Project page
@@ -22,6 +29,15 @@ dialog.open.title=Open NBT files
 
 dialog.unsaved.title=Save dialog
 dialog.unsaved.message=Do you want to discard your changes?
+
+dialog.edit.title=NBT edit value
+dialog.edit.cancel=Cancel
+dialog.edit.create=Create
+dialog.edit.confirm=Change
+dialog.edit.name.label=Name:
+dialog.edit.value.label=Value:
+dialog.edit.size.label=Array Size:
+dialog.edit.selector.label=NBT list type:
 
 dialog.about.title=About
 dialog.about.authors=TheCodingEngineer
